--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Sue-is-programming
 email: eungang3@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
   sue is now programming
-baseurl: "blog" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://eungang3.github.io/sue-is-programming/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  eungang3
 
