--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Sue-is-programming
+title: Sue is programming
 email: eungang3@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
-  sue is now programming
+  Sue was drawing before. Now she is programming
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://eungang3.github.io/sue-is-programming/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  eungang3
